<resources>
    <string name="app_name" translatable="false">Geodressr</string>
    <string name="difficile">Difficult</string>
    <string name="moyen">Normal</string>
    <string name="facile">Easy</string>
    <string name="recherche_zone">Search for a nearby area…</string>
    <string name="emplacement_trouve">Location found in</string>
    <string name="minutes_placeholder">000min 99s</string>
    <string name="add_new_photo">Add photo</string>
    <string name="photo_location_prefix">Photo taken at</string>
    <string name="three_dots" translatable="false">…</string>
    <string name="Save">Save</string>
    <string name="erreur_impossible_localiser">Error: Unable to locate</string>
    <string name="c_est_parti">Here we go!</string>
    <string name="ajoutez_une_photo_btn">Add a photo of your location</string>
    <string name="cancelled_photo">Photo taking cancelled</string>
    <string name="missing_camera_permission">Missing camera permission</string>
    <string name="leaderboard">Leaderboard</string>
</resources>