<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamePhotoActivity">

    <LinearLayout
        android:id="@+id/btnSavePhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/photoH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:layout_marginBottom="0dp"
            android:text="@string/emplacement_trouve"
            android:textAlignment="center"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/photoTimeSpent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minutes_placeholder"
            android:textAlignment="center"
            android:textSize="45sp"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/ajoutez_une_photo_btn" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:id="@+id/photoContainer"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:contentDescription="@string/ajoutez_une_photo_btn"
                app:srcCompat="@drawable/logo_geodressr" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btnAddPhoto"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/add_new_photo"
                android:onClick="onAddPhotoClick"
                app:srcCompat="@android:drawable/ic_menu_gallery" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/photoLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo_location_prefix" />

            <TextView
                android:id="@+id/photoLocationValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_dots" />
        </LinearLayout>

        <Button
            android:id="@+id/photoSaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Save"
            android:enabled="false"
            android:onClick="onSaveButtonClick"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>